GraalVM sample